objects/HealthCloudGA__ConditionToHCCCodeMapping__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ConditionCode__c</fullName>
        <label>Condition Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HCCCode__c</fullName>
        <label>HCC Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValidFrom__c</fullName>
        <description>Year in which the HCC code becomes valid.</description>
        <inlineHelpText>Year in which the HCC code becomes valid.</inlineHelpText>
        <label>Valid From</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValidThrough__c</fullName>
        <description>Year after which the code is no longer valid.</description>
        <inlineHelpText>Year after which the code is no longer valid.</inlineHelpText>
        <label>Valid Through</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__YearConditionCodeHCCCode__c</fullName>
        <externalId>true</externalId>
        <label>Year + Condition Code + HCC Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Condition to HCC Code Mapping</label>
    <nameField>
        <displayFormat>Map-{0}</displayFormat>
        <label>Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condition to HCC Code Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>